feat:Turn body into grid container

--- a/style.css
+++ b/style.css
@@ -18,10 +18,13 @@ ul {
 }
 
 .sidebar {
-    display:grid;
     grid-template:50px repeat(2, 1fr) / 1fr;
     gap:40px;
     padding:3vh 3vw;
+}
+
+body, .sidebar {
+    display:grid;
 }
 
 li {
