--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li {
 }
 
 .header-top {
-    grid-template-columns: 1fr 8fr repeat(2, 1fr) 2fr;
+    grid-template-columns: 50px 7fr repeat(2, 50px) 3fr;
 }
 
 .header {
