--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ li {
 .header-top {
     grid-template-columns: 50px 7fr repeat(2, 50px) 3fr;
     align-items:center;
+    gap:15px;
 }
 
 .header {
