feat:Turn header bottom div into grid container

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ ul {
     padding:3vh 3vw;
 }
 
-body, .sidebar, .body-right, .header-top, .header {
+body, .sidebar, .body-right, .header-top, .header, .header-bottom {
     display:grid;
 }
 
