feat:Add header bottom cols

--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ li {
     grid-template:repeat(2, 1fr) / 1fr;
 }
 
+.header-bottom {
+    grid-template-columns:2fr 1fr;
+}
+
 input[type="search"] {
     appearance:none;
     border:1px solid grey;
