--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     grid-template:1fr 5fr / 1fr;
 }
 
-ul, li, .welcome-message {
+ul, li, .welcome-message, .button-container {
     display:flex;
     gap:5px;
 }
