feat:Add max height to trending div h2

--- a/style.css
+++ b/style.css
@@ -110,3 +110,7 @@ input[type="search"] {
 .announcements > div:nth-last-child(1) {
     border:none;
 }
+
+.trending > h2 {
+    max-height:6px;
+}
