--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ li, .header-top, .welcome-message {
     gap:20px;
 }
 
-.header, .trending-user, .announcements > div {
+.header, .trending-user, .announcements > div, .project-card {
     background-color:whitesmoke;
 }
 
@@ -102,7 +102,7 @@ input[type="search"] {
     grid-row:1/3;
 }
 
-.trending > div, .announcements > div {
+.trending > div, .announcements > div, .project-card {
     padding:10px 40px;
 }
 
