feat:Add col gap and padding to content div

--- a/style.css
+++ b/style.css
@@ -75,7 +75,8 @@ li, .header-top, .welcome-message {
 
 .content {
     grid-template:repeat(2, 1fr) / 5fr 2fr;
-    row-gap:10px;
+    gap:10px 15px;
+    padding:20px;
 }
 
 .header {
