--- a/style.css
+++ b/style.css
@@ -101,6 +101,9 @@ input[type="search"] {
 
 .projects {
     grid-row:1/3;
+    grid-template-columns:repeat(2, 1fr);
+    grid-auto-rows:1fr;
+    gap:10px;
 }
 
 .trending > div, .announcements > div, .project-card {
