--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ input[type="search"] {
     gap:10px;
 }
 
+.projects > h2 {
+    grid-column:1/3;
+}
+
 .trending > div, .announcements > div, .project-card {
     padding:10px 40px;
 }
