--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ input[type="search"] {
 
 .projects {
     grid-row:1/3;
-    grid-template-columns:repeat(2, 1fr);
+    grid-template-columns:repeat(2, minmax(250px, 1fr));
     grid-auto-rows:1fr;
     gap:10px;
 }
