--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ ul {
 }
 
 .sidebar {
-    grid-template:50px repeat(2, 1fr) / 1fr;
+    grid-template:50px 1fr 4fr / 1fr;
     gap:40px;
     padding:3vh 3vw;
     background-color:red;
