--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ input[type="search"] {
     grid-template-columns:repeat(2, minmax(250px, 1fr));
     grid-auto-rows:1fr;
     gap:10px;
+    grid-auto-rows:1fr;
 }
 
 .projects > h2 {
@@ -130,9 +131,12 @@ input[type="search"] {
 
 .trending, .projects {
     grid-template-rows:1.7rem;
-    grid-auto-rows:1fr;
 }
 
 .project-card {
     max-height:250px;
+}
+
+.trending {
+    grid-auto-rows:70px;
 }
