--- a/style.css
+++ b/style.css
@@ -159,3 +159,7 @@ h1, h2, h3 {
 .button-container > button, input[type="search"] {
     border:1px solid grey;
 }
+
+button, .sidebar {
+    color:whitesmoke;
+}
