--- a/style.css
+++ b/style.css
@@ -100,11 +100,9 @@ input[type="search"] {
 }
 
 .projects {
-    grid-row:1/3;
+    grid-row:1/2;
     grid-template-columns:repeat(2, minmax(250px, 1fr));
-    grid-auto-rows:1fr;
     gap:10px;
-    grid-auto-rows:1fr;
 }
 
 .projects > h2 {
@@ -139,6 +137,7 @@ input[type="search"] {
 
 .trending {
     grid-auto-rows:70px;
+    grid-column:2/3;
 }
 
 p {
