--- a/style.css
+++ b/style.css
@@ -156,6 +156,11 @@ h1, h2, h3 {
     border-radius:10px;
 }
 
+.card-icons {
+    display:flex;
+    justify-content:flex-end;
+}
+
 .button-container > button, input[type="search"] {
     border:1px solid grey;
 }
